--- a/service-catalog.html
+++ b/service-catalog.html
@@ -265,28 +265,37 @@
         <section class="service-catalog-section">
           <div class="price-content-container">
             <p class="price-content" data-translate="price-content1">
-              Высококачественная станция технического обслуживания – это симбиоз
-              современного подхода к управлению процессами и высокой
-              квалификации сотрудников. Коллектив автосервиса АС КАСКАД накопил
-              богатый опыт выполнения работ по диагностике, ремонту, и
-              техническому обслуживанию автомобилей. И мы не останавливаемся на
-              достигнутом, продолжаем оттачивать свое мастерство и постоянно
-              улучшаем качество оказываемых услуг. СТО оснащена современным
-              диагностическим оборудованием и инструментом для ремонта
-              автомобилей, также мы имеем доступ к обширной базе технической
-              информации и руководств по ремонту.
+              Высококачественная станция технического обслуживания в Павлограде
+              – это симбиоз современного подхода к управлению процессами,
+              применения инновационных технологий и высокой квалификации
+              сотрудников. Коллектив автосервиса АС КАСКАД, работая в Павлограде
+              более 20 лет, накопил богатый опыт выполнения работ по диагностике
+              авто, ремонту автомобилей любой сложности, установке ГБО,
+              обслуживанию кондиционеров и комплексному техническому
+              обслуживанию автомобилей. Мы постоянно развиваемся, оттачиваем
+              свое мастерство и улучшаем качество услуг, чтобы оставаться
+              надежным СТО в Павлограде для каждого клиента. Наша станция
+              технического обслуживания оснащена современным диагностическим
+              оборудованием, инструментами для профессионального ремонта авто, а
+              также имеет доступ к обширной базе технической информации и
+              заводских руководств по ремонту и обслуживанию автомобилей
+              различных марок.
             </p>
             <p class="price-content" data-translate="price-content2">
-              Для максимального удобства клиентов и оптимизации сроков
-              выполнения работ всегда в наличии большой ассортимент технических
-              жидкостей и смазочных материалов. Прямые поставки запчастей от
-              официальных дилеров и импортеров — как подтверждение серьезного
-              подхода к управлению автосервисом. Если необходимой запчасти в
-              наличии нет, то обязательно закажем ее у партнеров. Менеджеры
-              нашего автосервиса призваны обеспечить связь с клиентом, и всегда
-              готовы ответить в понятной и открытой форме на любые вопросы,
-              которые Вас интересуют. Мы ничего не скрываем, и готовы обеспечить
-              доступ в ремзону в любой момент.
+              Для максимального удобства клиентов и сокращения сроков выполнения
+              работ в наличии всегда большой ассортимент технических жидкостей,
+              масел, фильтров и смазочных материалов. Мы обеспечиваем прямые
+              поставки запчастей от официальных дилеров и проверенных
+              импортеров, что подтверждает наш профессиональный подход к
+              управлению автосервисом и качеству ремонта авто. При отсутствии
+              нужной детали в наличии, мы оперативно заказываем её у партнеров и
+              поставщиков. Менеджеры автосервиса КАСКАД в Павлограде
+              обеспечивают надежную связь с клиентом, готовы подробно ответить
+              на все вопросы касательно ремонта автомобиля, установки ГБО,
+              подбора запчастей и диагностики авто. Мы работаем прозрачно,
+              предоставляем доступ в ремзону в любое время и всегда открыты к
+              общению. СТО КАСКАД – это автосервис Павлограда, где каждый клиент
+              уверен в профессионализме мастеров и качестве выполненных работ.
             </p>
           </div>
           <nav class="nav-service-catalog">
@@ -354,7 +363,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/dvigatel/8tcizgctuko-1-qpchmrvh7aztnf3sxxf8uhdyo8x8en6kivx116w2bo.jpg"
-                  alt=""
+                  alt="Ремонт двигателя Ауди А5"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig1">
@@ -365,7 +374,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/dvigatel/eaaykygwgyy-qpchmwko5h699gwz6hgdoy79n6a2h4p87j6gfkp3gk.jpg"
-                  alt=""
+                  alt="Ремонт двигателя Ауди А4"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig2">
@@ -376,7 +385,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/dvigatel/eeoeyod3zfy-qpchn35jhbf9iqnf42aroejhsvdmz0fckfqusifc90.jpg"
-                  alt=""
+                  alt="Замена цепи ГРМ на Ниссан Мурано Z51"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig3">
@@ -387,7 +396,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/dvigatel/od7mqwtn4qi-qpchmstbe513z12fsftvez5f9mslmcaav0kiiguo5g.jpg"
-                  alt=""
+                  alt="Ремонт двигателя Mitsubishi Outlander"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig4">
@@ -398,7 +407,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/dvigatel/vshf9b1rcui-qpchn27pahdz74os9jw53ws17hi9rbbm8b3db8gqf8.jpg"
-                  alt=""
+                  alt="Замена маховика Skoda Yeti"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig5">
@@ -409,7 +418,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/dvigatel/w2dp2ejmdcy-qpchn8skmbmzgef874qj3d49d6lu971ql7nro66z7o.jpg"
-                  alt=""
+                  alt="Ремонт двигателя Volkswagen Passat B7"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig6">
@@ -436,7 +445,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/hodovka/ford-4-min.jpg"
-                  alt="ford"
+                  alt="Замена нижних с/б Ford"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov1">
@@ -447,7 +456,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/hodovka/nis-1-min.jpg"
-                  alt="Nissan Qashqai"
+                  alt="Ремонт сайлентблока Nissan Qashqai"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov2">
@@ -458,7 +467,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/hodovka/nissan2-min.jpg"
-                  alt="Nissan"
+                  alt="Замена сальника привода КПП Nissan"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov3">
@@ -469,7 +478,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/hodovka/nissan_note5-1_1.jpg"
-                  alt="Nissan Note"
+                  alt="Замена пружин Nissan Note"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov4">
@@ -480,7 +489,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/hodovka/pego3-min.jpg"
-                  alt="Pego"
+                  alt="Замена сальника привода и стоек стабилизатора Pego"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov5">
@@ -491,7 +500,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/hodovka/tig4-min.jpg"
-                  alt="Volkswagen Tiguan"
+                  alt="Замена амортизаторов Volkswagen Tiguan"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov6">
@@ -519,7 +528,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/elektro/proverka-akb.jpg"
-                  alt=""
+                  alt="Подбор и замена АКП на Dodge"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro1">
@@ -530,7 +539,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/elektro/snjatie-gener-duster.jpg"
-                  alt=""
+                  alt="Процесс снятия генератора на Reno Duster"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro2">
@@ -541,7 +550,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/elektro/ustanovka-signaliz.jpg"
-                  alt=""
+                  alt="Процесс монтирования сигнализации на Ауди"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro3">
@@ -552,7 +561,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/elektro/zamena-generatora-lancer.jpg"
-                  alt=""
+                  alt="Замена генератора на лансер 9"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro4">
@@ -563,7 +572,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/elektro/zamena-pribornoy-p-volksv.jpg"
-                  alt=""
+                  alt="Ремонт приборной панели на Фольцваген"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro5">
@@ -590,7 +599,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/tormoz/logan-zamena-peredn-ts.jpg"
-                  alt=""
+                  alt="Замена передней тормозной системы на Reno Logan"
                   loading="lazy"
                 />
                 <p
@@ -604,7 +613,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/tormoz/regul-torm-sist.jpg"
-                  alt=""
+                  alt="Ремонт тормозной системы"
                   loading="lazy"
                 />
                 <p
@@ -618,7 +627,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/tormoz/torm-kolodki-lanser10.jpg"
-                  alt=""
+                  alt="Замена колодок на Mitsubisi Lancer 10"
                   loading="lazy"
                 />
                 <p
@@ -632,7 +641,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/tormoz/zamena-torm-kolodok.jpg"
-                  alt=""
+                  alt="Замена колодок"
                   loading="lazy"
                 />
                 <p
@@ -646,7 +655,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/tormoz/zamena-torm-kolodok1.jpg"
-                  alt=""
+                  alt="Замена колодок"
                   loading="lazy"
                 />
                 <p
@@ -660,7 +669,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/tormoz/zamena-torm-shlangov.jpg"
-                  alt=""
+                  alt="Замена тормозных шлангов"
                   loading="lazy"
                 />
                 <p
@@ -690,7 +699,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/transm/akpp-shkoda-oct.jpg"
-                  alt="akpp-shkoda-oct"
+                  alt="Ремонт АКПП Шкода Октавия"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm1">
@@ -701,7 +710,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/transm/kardan-reno-duster.jpg"
-                  alt="kardan-reno-duster"
+                  alt="Замена кардана на Рено Дастер"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm2">
@@ -712,7 +721,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/transm/scepl-logan.jpg"
-                  alt="scepl-logan"
+                  alt="Замена сцепления на Логан"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm3">
@@ -723,7 +732,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/transm/scepl-smart.jpg"
-                  alt="scepl-smart"
+                  alt="Замена сцепления на Смарт"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm4">
@@ -734,7 +743,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/transm/scepl_yaris.jpg"
-                  alt="scepl_yaris"
+                  alt="Замена сцепления на Toyota Yaris"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm5">
@@ -762,7 +771,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/to/filter-salona.jpg"
-                  alt="filter-salona"
+                  alt="Замена фильтра салона"
                   loading="lazy"
                 />
                 <p
@@ -776,7 +785,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/to/maslo-kp.jpg"
-                  alt="maslo-kp"
+                  alt="Замена масла в коробке передач"
                   loading="lazy"
                 />
                 <p
@@ -790,7 +799,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/to/remen-grm.jpg"
-                  alt="remen-grm"
+                  alt="Замена и регулировка ремня ГРБ"
                   loading="lazy"
                 />
                 <p
@@ -804,7 +813,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/to/vozd-filter.jpg"
-                  alt="vozd-filter"
+                  alt="Замена воздушного фильтра"
                   loading="lazy"
                 />
                 <p
@@ -818,7 +827,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/to/zamena-masla-dvig.jpg"
-                  alt="zamena-masla-dvig"
+                  alt="Замена масла в двигателе"
                   loading="lazy"
                 />
                 <p
@@ -850,7 +859,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik1.jpg"
-                  alt=""
+                  alt="Диагностика автомобильных компрессоров"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi1">
@@ -861,7 +870,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik2.jpg"
-                  alt=""
+                  alt="Замена автомобильных компрессоров"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi2">
@@ -872,7 +881,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik3.jpg"
-                  alt=""
+                  alt="Проверка давление и устранение вытока фриона"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi3">
@@ -883,7 +892,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik4.jpg"
-                  alt=""
+                  alt="Заправка фрионом"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi4">
@@ -894,7 +903,7 @@
                 <img
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik5.jpg"
-                  alt=""
+                  alt="Антибактериальная обработка дифлекторов"
                   loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi5">
