--- a/price.html
+++ b/price.html
@@ -262,19 +262,24 @@
         <section class="price-section">
           <div class="price-content-container">
             <p class="price-content" data-translate="price-content-1">
-              Представляем Вашему вниманию актуальный прайс-лист автосервиса «АС
-              КАСКАД» в Павлограде. Мы специализируемся на полном спектре услуг
-              по ремонту и обслуживанию автомобилей всех марок. В этом перечне
-              собраны наиболее популярные виды работ, отобранные на основе
-              нашего многолетнего опыта и реальных запросов клиентов.
+              Представляємо вашій увазі актуальний прайс-лист автосервісу «АС
+              КАСКАД» у Павлограді. Наша станція технічного обслуговування понад
+              20 років спеціалізується на повному спектрі послуг з ремонту та
+              обслуговування автомобілів усіх марок – від легкових до
+              комерційних. Ми виконуємо якісну комп'ютерну діагностику,
+              професійне технічне обслуговування, заміну мастил, ремонт ходової,
+              гальмівної системи, встановлення та сервісне обслуговування ГБО, а
+              також ремонт та заправку автокондиціонерів.
             </p>
             <p class="price-content" data-translate="price-content-2">
-              Здесь Вы найдёте основные услуги по диагностике, техническому
-              обслуживанию и ремонту автомобильных узлов и агрегатов. Если
-              нужной Вам услуги нет в списке – просто позвоните нам по телефонам
-              +38 (066) 837 56 66 или +38 (096) 211 02 10. Наши специалисты
-              всегда готовы проконсультировать и предложить оптимальное решение
-              для Вашего автомобиля.
+              Тут ви знайдете основні послуги з діагностики автомобіля,
+              технічного обслуговування, ремонту двигуна, підвіски, гальмівної
+              системи та встановлення газобалонного обладнання. Якщо потрібної
+              послуги немає у списку – просто зателефонуйте нам за телефонами
+              +38 (066) 837 56 66 або +38 (096) 211 02 10. Менеджери автосервісу
+              «АС КАСКАД» завжди готові надати професійну консультацію,
+              відповісти на ваші запитання та запропонувати оптимальне рішення
+              для будь-якої марки та моделі автомобіля.
             </p>
           </div>
 
