--- a/service-catalog.html
+++ b/service-catalog.html
@@ -301,45 +301,51 @@
           <nav class="nav-service-catalog">
             <ul class="list-service-catalog">
               <li class="item-service-catalog">
-                <a href="#dvigatel" data-translate="item-service-catalog-dvig"
+                <a
+                  href="./remont-dvigatelya.html"
+                  data-translate="item-service-catalog-dvig"
                   >Двигун</a
                 >
               </li>
               <li class="item-service-catalog">
-                <a href="#hodovka" data-translate="item-service-catalog-hodov"
+                <a
+                  href="./remont-hodovoy.html"
+                  data-translate="item-service-catalog-hodov"
                   >Ходова частина</a
                 >
               </li>
               <li class="item-service-catalog">
                 <a
-                  href="#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="item-service-catalog-electro"
                   >Електрика</a
                 >
               </li>
               <li class="item-service-catalog">
                 <a
-                  href="#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="item-service-catalog-tormoznaja"
                   >Гальмівна система</a
                 >
               </li>
               <li class="item-service-catalog">
                 <a
-                  href="#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="item-service-catalog-transm"
                   >Трансмісія</a
                 >
               </li>
               <li class="item-service-catalog">
                 <a
-                  href="#servisnoe"
+                  href="./technical-service.html"
                   data-translate="item-service-catalog-servisnoe"
                   >Технічне обслуговування</a
                 >
               </li>
               <li class="item-service-catalog">
-                <a href="#kondi" data-translate="item-service-catalog-kondi"
+                <a
+                  href="./air-conditioning.html"
+                  data-translate="item-service-catalog-kondi"
                   >Обслуговування кондиціонерів</a
                 >
               </li>
